--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.8.0",
+    "express": "^4.17.1",
+    "ng2-charts": "^2.3.0",
+    "path": "^0.12.7",
+    "read-json-file": "^1.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
