--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "tesis2",
+  "name": "tesis",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,7 +28,8 @@
     "read-json-file": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.9.1",
+    "bootstrap": "^4.4.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.2",
@@ -52,7 +53,7 @@
     "typescript": "~3.5.3"
   },
   "engines": {
-    "node": "10.9",
+    "node": "12.11.1",
     "npm": "6.4.1"
   }
 }
