--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~8.2.4",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "bootstrap": "^4.4.1",
     "chart.js": "^2.8.0",
     "express": "^4.17.1",
+    "firebase": "^7.14.5",
     "ng2-charts": "^2.3.0",
     "path": "^0.12.7",
     "read-json-file": "^1.0.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "bootstrap": "^4.4.1"
+    "xlsx": "^0.16.1",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.2",
